# binaryen

./: CMakeLists.txt
src/asmjs/: CMakeLists.txt
src/cfg/: CMakeLists.txt
src/emscripten-optimizer/: CMakeLists.txt
src/ir/: CMakeLists.txt
src/passes/: CMakeLists.txt  LegalizeJSInterface.cpp
src/support/: CMakeLists.txt
src/wasm/: CMakeLists.txt
test/passes/: legalize-js-interface.txt  legalize-js-interface.wast
